--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.farhazulmullick.videoplayer">
 
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage"/>
+
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
 
     <uses-permission android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
@@ -26,6 +35,10 @@
             android:name=".FolderDetailsActivity"
             android:exported="true"
             android:theme="@style/FolderDetailsActivityStyle" />
+
+        <activity android:name="com.farhazulmullick.permissionmanager.PermissionsActivity"
+            android:exported="false"
+            android:theme="@style/PermissionActivityStyle"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
