Re-structuring of directories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,15 @@
             android:configChanges="uiMode|orientation|screenSize|screenLayout"
             android:exported="true" />
         <activity
-            android:name=".FolderDetailsActivity"
+            android:name="com.farhazulmullick.feature.folders.ui.activity.FolderDetailsActivity"
             android:exported="true"
             android:theme="@style/FolderDetailsActivityStyle" />
 
-        <activity android:name="com.farhazulmullick.permissionmanager.PermissionsActivity"
+        <activity android:name="com.farhazulmullick.core_ui.permissionmanager.PermissionsActivity"
             android:exported="false"
             android:theme="@style/PermissionActivityStyle"/>
         <activity
-            android:name=".MainActivity"
+            android:name="com.farhazulmullick.application.MainActivity"
             android:exported="true"
             android:theme="@style/MainActivityStyle">
             <intent-filter>
