--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ android {
 
 dependencies {
 
+    //include coreui
+    implementation project(path: ":core-ui")
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
