--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = "1.8.0"
         lifecycle_version = "2.6.1"
         exoplayer_version = "2.15.1"
+        update_checker_version = "2.1.0"
     }
     repositories {
         google()
