--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,9 @@ dependencies {
     //in app updates
     implementation "com.google.android.play:app-update-ktx:$update_checker_version"
 
+    // room db
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
 }
