--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         exoplayer_version = "2.15.1"
         update_checker_version = "2.1.0"
         room_version = "2.5.2"
+        hilt_version = "2.46.1"
     }
     repositories {
         google()
@@ -19,6 +20,11 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id("com.google.dagger.hilt.android") version "$hilt_version" apply false
+    id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
 }
 
 task clean(type: Delete) {
