Added new compose dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,13 @@ android {
     buildFeatures{
         dataBinding = true
         viewBinding = true
+        compose = true
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "$compiler_extension"
+    }
+
 }
 
 dependencies {
@@ -88,5 +94,17 @@ dependencies {
 
     //in app updates
     implementation "com.google.android.play:app-update-ktx:$update_checker_version"
+
+    //compose
+    def composeBom =  platform("androidx.compose:compose-bom:$compose_bom")
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewModel_compose"
 
 }
