--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,10 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata'
     debugImplementation 'androidx.compose.ui:ui-tooling'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewModel_compose"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewModel_compose"\
+
+    // coil
+    implementation("io.coil-kt:coil-compose:$composeCoil")
+    implementation("io.coil-kt:coil-svg:$composeCoil")
 
 }
