--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -33,6 +33,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        compose = true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "$compiler_extension"
+    }
 }
 
 dependencies {
@@ -50,4 +58,23 @@ dependencies {
 
     //fragment extensions
     implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
+    //compose
+    def composeBom =  platform("androidx.compose:compose-bom:$compose_bom")
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewModel_compose"
+
+    // coil
+    implementation("io.coil-kt:coil-compose:$composeCoil")
+    implementation("io.coil-kt:coil-svg:$composeCoil")
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
