--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,23 @@
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
+/.idea/shelf
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+
+
+.idea/
+
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-local.properties
-/.idea/codestream.xml
+
+app/release/
+app/debug/
+*.apk
+*.aab
+/build/
+/*/build/
